update on sect. 4 &5 : iteration

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -139,13 +139,13 @@ Such observations may be represented at the highest granularity as  a set of com
 
 \subsection{Single dish data}\label{subsec:sd}
 
-Single Dish observations can be done with different types of receiving systems. Typical frontends are mono-feed, multi-feed and phased array feed (PAF), the last two suitable to efficiently span wider parts of the sky.
+Single Dish (SD) observations can be done with different types of receiving systems. Typical frontends are mono-feed, multi-feed and phased array feed (PAF), the last two suitable to efficiently span wider parts of the sky.
 Data can be acquired by various backend systems providing either the total intensity (integrated over the whole available bandwidth) or the spectroscopic/spectropolarimetric intensity (acquired in each spectral channel/sample).
 Data are saved as raw counts resulting from the digitization of the voltage signal measured by the receiving system.
 Commonly-used SD data formats are registered FITS standard conventions (FITS, SDFITS and MBFITS) or unregistered conventions like the standard FITS-based format delivered by the INAF radio telescopes.
 
 The combination of telescope, frontend and backend permits the realization of various observing strategies characterized by specific spatial and/or spectral patterns.
-Typical SD observing strategies are: \texttt{on-source}, \texttt{frequency switching}, \texttt{on-off} observations, \texttt{raster} or \texttt{on-the-fly} (OTF) mapping, \texttt{on-the-fly-cross-scan}, \texttt{skydip} calibrations, see Fig~\ref{fig:SD}. For each spatial position in the observation, SD data gather emission for any of the spectral samples in the given frequency band and polarization.
+Typical SD observing strategies are: \texttt{on-source}, \texttt{frequency switching}, \texttt{on-off} observations, \texttt{raster} or \texttt{on-the-fly} (OTF) mapping, \texttt{on-the-fly-cross-scan}, \texttt{skydip} calibrations (see Fig~\ref{fig:SD}). For each spatial position in the observation, SD data gather emission for any of the spectral samples in the given frequency band and polarization.
 If multi-feed/PAFs are used, a set of spatial positions are simultaneously measured. Scan modes should be described in ObsCore in order to allow astronomers to better understand the structure of the data which will be retrieved.
 
 Spatial resolution in the SD case is intended as the beam size. This holds true for any type of receivers, since also for multi-feed/PAF ones the spatial resolution is ruled by the size of the individual beam.
@@ -169,7 +169,6 @@ and FRB Radio Data Discovery and Access IVOA Note\footnote{\url{https://wiki.ivo
 \caption{Single Dish Observation scan modes}
 \label{fig:SD}
 \end{figure}
-
 
 
 \subsection{Visibility data }
@@ -322,9 +321,9 @@ and tackles some of these specificities. However some of them SHOULD be covered 
 
 \section{ObsCore extension specific for radio data}
 
-Tables \ref{tab:ExtensionAtt}, \ref{tab:ExtensionAtt_interferometry} and \ref{tab:ExtensionAtt_instrumental} show the %additional
-querying parameters we propose to add to ObsCore in order to better describe radio single dish and visibility data.
-The last column indicates if the attribute is useful for all radio datasets or only for visibilities, beam forming, or single dish data.
+Tables \ref{tab:ExtensionAtt}, \ref{tab:ExtensionAtt_interferometry} and \ref{tab:ExtensionAtt_instrumental} show the 
+querying parameters we propose to include into the ObsCore radio extension table in order to better describe radio single dish and visibility data.
+%Change Mir june 2025 . the 3 tables sort the various medata by category : general , interferometry and instrumental . The last column indicates if the attribute is useful for all radio datasets or only for visibilities, beam forming, or single dish data.
 
 \subsection{Spatial parameters}
 
@@ -334,13 +333,11 @@ $\lambda$ values in the spectral range(s) will be used in the formula  $\lambda 
 In the case of mapping scans or multi-feed/PAF receivers \emph{ s\_fov\_min} and \emph{s\_fov\_max} are derived as the minimum and maximum sizes of the 
 circular region encompassing the covered area.
 
-
 \emph{s\_resolution\_min, s\_resolution\_max} are estimated like the typical value by the formula  $\lambda / L$  (see subsection \ref{sec:res}) where $\lambda$ is replaced respectively by the minimum and maximum wavelength of the spectral range(s). The size L is the telescope diameter for SD observations and the largest distance in the \emph{uv} plane for interferometry. Beam forming may represent an exception to this rule, see \ref{sec:res}.
 
 In the case of interferometry, we introduce the new \emph{s\_largest\_angular\_scale} which is estimated as $\lambda/l$ where $\lambda$ is the typical
 wavelength (and again typical value SHOULD be estimated as the mid value of the spectral range apart from documented exceptions) and l is the typical smallest distance in the \emph{uv} plane. This parameter is not relevant for other observation modes.
 The largest angular scale is also variable along the spectral range. That's why we bound it with \emph{s\_largest\_angular\_scale\_min} and \emph{s\_largest\_angular\_scale\_max} estimated as  respectively $\lambda\_min/l$ and  $\lambda\_max/l$
-
 
 
 \subsection{Frequency characterization}
@@ -353,9 +350,10 @@ For users willing to access spectral ranges in frequencies we can imagine severa
 \begin{itemize}
 	\item compute two free parameters \emph{f\_min} and \emph{f\_max} this way \emph{f\_min} = c / \emph{em\_max} and \emph{f\_max} = c / \emph{em\_min} with c = 299 792 458 m/s
 	\item express queries and results in terms of frequencies by using the same  formulae in the ADQL queries (see \ref{sec:FreqRanges})
-	\item let the interface do these conversions 
-	\item use User Defined Functions on TAP services, like  \emph{ivo\_interval\_overlaps, ivo\_specconv}	
+	\item let the interface do these conversions 	
 \end{itemize}
+
+Using the ADQL User Defined Functions \citep{2024ivoa.spec.1107C} in queries for unit conversion as well as \emph{ivo\_interval\_overlaps, ivo\_specconv} would simplify the interface for the user and avoid  columns duplication for the spectral coverage . 
 
 %\textit{To avoid inconsistency between the core attributes \emph{em\_min, em\_max} and \emph{em\_respower} and these additional quantities we suggest to compute these new quantities when building a view on top of the basic ObsCore table. The frequency attributes MUST be expressed in Hz to allow interoperability.} 
 
@@ -681,7 +679,7 @@ $$ \hbox{\nolinkurl{ivo://ivoa.net/std/ObsCore#radioExt-1.0}.} $$
 %any standardID for the extension yet. The discovery of the services and schema containing the
 %radio extension  table MUST be done using the table\_name only as stated below.
 While it is admitted that the table only sits in the tableset of the
-embedding TAP service, implementors are urged to use a seperate registry
+embedding TAP service, implementors are urged to use a separate registry
 record with the main TAP service as an auxiliary capability
 \citep{2019ivoa.spec.0520D}. In this way, meaningful information
 on coverage in space, time, and spectral axes as per VODataService 1.2 can
@@ -760,7 +758,7 @@ SHOULD use the root ObsCore standardID utype :
 $$
 \hbox{\nolinkurl{ivo://ivoa.net/std/ObsCore}}
 $$
-Then the following query would allow to discover all services exposing ObsCore metadata as well as  which extension tables they deliver.
+Then the following query would allow to discover all services exposing ObsCore metadata as well as  the extension tables they deliver.
 
 \begin{lstlisting}
 SELECT DISTINCT(access_url), table_name, schema_name
